--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "md5": "^2.3.0",
     "mongoose": "^5.11.19",
-    "mongoose-encryption": "^2.0.3"
+    "mongoose-encryption": "^2.0.3",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0"
   }
 }
