Google Oauth 20 dummy project

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "md5": "^2.3.0",
     "mongoose": "^5.11.19",
     "mongoose-encryption": "^2.0.3",
+    "mongoose-findorcreate": "^3.0.0",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
   }
